force-app/main/default/objects/Field_Mapping__c/Field_Mapping__c.object-meta.xml
<CustomObject>
    <label>Field Mapping For duplicate Config</label>
    <nameField>
        <displayFormat>FM-{0000}</displayFormat>
        <label>Field Mapping no</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Field Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>