force-app/main/default/objects/Field_Mapping__c/fields/Duplication_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Duplication_Configuration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Duplication Configuration</label>
    <referenceTo>Duplication_Configuration__c</referenceTo>
    <relationshipName>Field_Mappings</relationshipName>
    <type>Lookup</type>
</CustomField>