force-app/main/default/objects/Field_Mapping__c/fields/General_Setup__c.field-meta.xml
<CustomField>
    <fullName>General_Setup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>General Setup</label>
    <referenceTo>General_Setup__c</referenceTo>
    <relationshipName>Field_Mappings</relationshipName>
    <type>Lookup</type>
</CustomField>