force-app/main/default/objects/Field_Mapping__c/fields/GS_Source_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>GS_Source_Field_API_Name__c</fullName>
    <label>GS Source Field API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>