force-app/main/default/objects/Field_Mapping__c/fields/Operation__c.field-meta.xml
<CustomField>
    <fullName>Operation__c</fullName>
    <description>Determines when this mapping is applied: related_creation (creating enquiry source), reengaged_update (updating primary record on re-engagement), reopened_update (updating primary record on reopen).</description>
    <label>Operation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>related_creation</fullName>
                <default>true</default>
                <label>related_creation</label>
            </value>
            <value>
                <fullName>reengaged_update</fullName>
            </value>
            <value>
                <fullName>reopened_update</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>