force-app/main/default/objects/Field_Mapping__c/fields/Primary_Object_Field_value__c.field-meta.xml
<CustomField>
    <fullName>Primary_Object_Field_value__c</fullName>
    <label>Primary Object Field (value)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>