force-app/main/default/objects/Field_Mapping__c/fields/Related_object_field__c.field-meta.xml
<CustomField>
    <fullName>Related_object_field__c</fullName>
    <label>Related object field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>