force-app/main/default/objects/Field_Mapping__c/fields/Source_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Source_Field_API_Name__c</fullName>
    <formula>Duplication_Configuration__r.Primary_Object_API_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Source Field API Name</label>
    <type>Text</type>
</CustomField>