force-app/main/default/objects/Field_Mapping__c/fields/Target_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Target_Field_API_Name__c</fullName>
    <formula>Duplication_Configuration__r.Related_Object_API_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Target Field API Name</label>
    <type>Text</type>
</CustomField>