force-app/main/default/objects/Field_Mapping__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>General_Setup__c</columns>
    <columns>Source_Field_API_Name__c</columns>
    <columns>Target_Field_API_Name__c</columns>
    <columns>Related_object_field__c</columns>
    <columns>Primary_Object_Field_value__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>